@@ -73,8 +73,8 @@ public class UserDetail extends AuditDetail {
     public UserDetail(String firstName, String lastName, String middleName, String emailId, String phoneNo, Address address,
                       Date dob, Long aadharNumber, byte[] photo) {
         super();
-        if (firstName == null || firstName.trim().isEmpty()) throw new IllegalArgumentException("First name is required");
-        if (lastName == null || lastName.trim().isEmpty()) throw new IllegalArgumentException("Last name is required");
+        if (firstName == null || firstName.trim().isBlank()) throw new IllegalArgumentException("First name is required");
+        if (lastName == null || lastName.trim().isBlank()) throw new IllegalArgumentException("Last name is required");
         if (emailId == null || emailId.isBlank()) throw new IllegalArgumentException("Email is required");
         if (!emailId.matches("^[A-Za-z0-9+_.-]+@[A-Za-z0-9.-]+$")) throw new IllegalArgumentException("Invalid email format");
         if (phoneNo != null && !phoneNo.matches("\\d{10}")) throw new IllegalArgumentException("Phone number must be 10 digits");
@@ -123,16 +123,10 @@ public class UserDetail extends AuditDetail {
     }
 
     public void setFirstName(String firstName) {
-        if (firstName == null || firstName.trim().isEmpty()) {
-            throw new IllegalArgumentException("First name is required");
-        }
-        this.firstName = firstName.trim();
+        this.firstName = firstName;
     }   
     public void setLastName(String lastName) {
-        if (lastName == null || lastName.trim().isEmpty()) {
-            throw new IllegalArgumentException("Last name is required");
-        }
-        this.lastName = lastName.trim();
+        this.lastName = lastName;
     }
     public void setMiddleName(String middleName) {
         this.middleName = middleName;
